src/test/06-Errors/error-tabs.txt
error-tabs.ck:3:12: syntax error
[3] it    @ is not ! valid => syntax!
               ^
